@@ -5,7 +5,7 @@
 \description{ 
     A function which calls the pantcl application inside of a R package. 
 } 
-\usage{ pantcl(infile, outfile=NULL, css=NULL,quiet=FALSE, ...) } 
+\usage{ pantcl(infile, outfile=NULL, css=NULL,quiet=FALSE, mathjax=FALSE,...) } 
 \arguments{ 
   \item{infile}{ 
     an infile with Markdown code and embedded Programming language code 
@@ -19,6 +19,9 @@
   \item{quiet}{ 
     should messages been hidden, default: FALSE 
   } 
+  \item{mathjax}{ 
+    should the MathJax Javascript library be loaded, default: FALSE 
+  } 
   \item{\ldots}{kept for compatibility with pandoc, not used currently } 
 } 
 \details{ 
@@ -26,6 +29,6 @@
 } 
 \examples{ 
   print("pantcl running") 
-  cat("## Title\n\nHello World!\n\n```{r eval=TRUE}\nprint('Hello World!')\n```\n",file="hello.Rmd") 
-  pantcl("hello.Rmd","hello.html") 
+  cat("## Title\n\nHello World!\n\n\\\\[ E = mc^2 \\\\]\n\n```{r eval=TRUE}\nprint('Hello World!')\n```\n",file="hello.Rmd") 
+  pantcl("hello.Rmd","hello.html",mathjax=TRUE) 
 } 
